is_debug = false

use_partition_alloc_as_malloc = true
use_allocator_shim = true
shim_supports_sized_dealloc = true
enable_backup_ref_ptr_support = true
enable_backup_ref_ptr_slow_checks = true
enable_dangling_raw_ptr_checks = true
enable_ios_corruption_hardening = true
raw_ptr_zero_on_construct = true
raw_ptr_zero_on_move = true
raw_ptr_zero_on_destruct = true
